# ollama-mcp

./: .env.example  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  dev-requirements.txt  mcp.json  notepad  pyproject.toml  requirements.txt
analysis/: code_review.md  refactoring_plan.md  summary.md
docs/: mcp_servers.md
ollama_mcp_discord/: __init__.py  __main__.py  system_message.py
ollama_mcp_discord/core/: config.py  session.py  settings.py
ollama_mcp_discord/discord/: bot.py
ollama_mcp_discord/mcp/: __init__.py  client.py  sdk_client.py
ollama_mcp_discord/mcp/servers/: __init__.py  base.py  fetch.py  memory.py  puppeteer.py  sequential_thinking.py
ollama_mcp_discord/ollama/: __init__.py  client.py  mcp_adapter.py
ollama_mcp_discord/utils/: daemon_manager.py  http.py  mcp_daemon_cli.py
tests/: README.md  __init__.py  conftest.py  test_discord_bot.py  test_mcp_client.py  test_ollama_client.py  test_session.py  test_system_message.py
tests/discord/: test_message_chunking.py
